AHHH more baackground flickering, think I fixed it this time?

--- a/src/Slideshow.css
+++ b/src/Slideshow.css
@@ -71,11 +71,11 @@
   /* Fade in animation */
   .image-container {
     opacity: 0.9;
-    -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 4s; /* Firefox < 16 */
-        -ms-animation: fadein 4s; /* Internet Explorer */
-         -o-animation: fadein 4s; /* Opera < 12.1 */
-            animation: fadein 4s;
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
 }
         @keyframes fadein {
             from { opacity: 0.3; }
